# StorgataDB

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  db-service.yaml  kv.yaml  run-kv.sh
deploy/: db-service.yaml
src/: cli.rs  cmd.rs  connection.rs  logger.rs  main.rs  resp_codec.rs  server.rs  sync_layer.rs
