[package]
name = "storgata-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcask-engine-rs = "0.1.0"
raft-lite = "0.1.0"
clap = { version = "4.2.5", features = ["derive", "env"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "fmt",
    "ansi",
    "std",
    "registry",
] }
async-recursion = "1.0.5"
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"