[package]
name = "storgata-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcask-engine-rs = "0.1.0"
raft-lite = "0.2.4"
clap = { version = "4.2.5", features = ["derive", "env"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
async-recursion = "1.0.5"
uuid = { version = "1.6.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }